--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^2.1.7
   shared_preferences: ^0.5.3+1
+  timeago: ^2.0.16
 
 dev_dependencies:
   flutter_test:
