--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   dio: ^2.1.7
   shared_preferences: ^0.5.3+1
   timeago: ^2.0.16
+  # adhara_socket_io: ^0.2.0
+  redux: ^3.0.0
 
 dev_dependencies:
   flutter_test:
