--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   timeago: ^2.0.16
   # adhara_socket_io: ^0.2.0
   redux: ^3.0.0
+  flutter_redux: ^0.5.3
 
 dev_dependencies:
   flutter_test:
