--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,6 +15,12 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
+	<string>图库</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>摄像头</string>
+	<key>NSCameraUsageDescription</key>
+	<string>麦克风</string>
+	<key>NSMicrophoneUsageDescription</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
