--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # adhara_socket_io: ^0.2.0
   redux: ^3.0.0
   flutter_redux: ^0.5.3
+  image_picker: ^0.6.1
 
 dev_dependencies:
   flutter_test:
