--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   redux: ^3.0.0
   flutter_redux: ^0.5.3
   image_picker: ^0.6.1
+  cached_network_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
