--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   dio: ^2.1.7
   shared_preferences: ^0.5.3+1
   timeago: ^2.0.16
-  adhara_socket_io: ^0.3.2
+  #adhara_socket_io: ^0.3.3
   redux: ^3.0.0
   flutter_redux: ^0.5.3
   image_picker: ^0.6.1
